--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 h1{
-    color:#ff0000;
+    color:#ea00ff33;
     text-decoration: underline;
-    font-size: 15px;
-    
+    font-size: 30px;
+    text-align: center;
+    font-style: italic;
 }
